@@ -6,4 +6,5 @@ Snapshot
 TimeStamps
 .svn
 test/
+deep-connect
 
