@@ -1,3 +1,4 @@
+# encoding: UTF-8
 
 module Fairy
 
@@ -40,6 +41,7 @@ module Fairy
     def_prop :LIB
 
     def_prop :N_MOD_GROUP_BY
+    def_prop :HASH_MODULE
 
     def_prop :LOG_FILE
     def_prop :LOG_LEVEL
